# bwilcd

./: .cruft.json  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
bwilcd/: __init__ copy.py  __init__.py  cli.py  client.py  formatter.py  models.py  nodes.json  utils.py  xml_parser.py
bwilcd/ui/: commands.py  display.py  session.py
conda.recipe/: meta.yaml
docs/: conf.py  environment.yaml  index.md
tests/: __init__.py  conftest.py  test_client.py
